<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plugin_icon"
        style="@style/TextSubtitle"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <ImageView
        android:id="@+id/iv_icon_preview"
        android:layout_width="@dimen/icon_xxlarge"
        android:layout_height="@dimen/icon_xxlarge"
        android:background="@drawable/bg_card"
        android:padding="@dimen/spacing_lg"
        android:src="@drawable/ic_image" />

    <Button
        android:id="@+id/btn_pick_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/btn_select_icon"
        style="@style/Widget.UIN.Tool.Button"
        android:layout_marginTop="@dimen/spacing_lg" />

    <Button
        android:id="@+id/btn_skip_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/wizard_icon_skip"
        style="@style/Widget.UIN.Tool.Button.Outlined"
        android:layout_marginTop="@dimen/spacing_sm" />

    <TextView
        android:id="@+id/tv_icon_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wizard_icon_default_text"
        style="@style/TextCaption"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_lg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wizard_icon_hint"
        style="@style/TextCaption"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_sm" />

</LinearLayout>