<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_manager_title"
        style="@style/TextSubtitle"
        android:layout_marginBottom="@dimen/spacing_md" />

    <EditText
        android:id="@+id/et_new_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/category_name_hint"
        android:inputType="text"
        android:background="@drawable/bg_input"
        android:paddingHorizontal="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_md" />

    <Button
        android:id="@+id/btn_add_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/add_category"
        style="@style/Widget.UIN.Tool.Button"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_categories"
        style="@style/TextBody"
        android:layout_marginBottom="@dimen/spacing_sm" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_input" />

</LinearLayout>