<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@android:color/white"
        app:title="@string/widget_config_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_lg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_config_select_plugins"
                style="@style/TextSubtitle"
                android:layout_marginBottom="@dimen/spacing_lg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_plugin_1"
                style="@style/TextBody"
                android:layout_marginBottom="@dimen/spacing_sm" />

            <Spinner
                android:id="@+id/spinner_plugin1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_plugin_2"
                style="@style/TextBody"
                android:layout_marginBottom="@dimen/spacing_sm" />

            <Spinner
                android:id="@+id/spinner_plugin2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:background="@drawable/bg_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_plugin_3"
                style="@style/TextBody"
                android:layout_marginBottom="@dimen/spacing_sm" />

            <Spinner
                android:id="@+id/spinner_plugin3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/spacing_xl"
                android:background="@drawable/bg_input" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/save"
                    style="@style/Widget.UIN.Tool.Button"
                    android:layout_marginEnd="@dimen/spacing_md" />

                <Button
                    android:id="@+id/btn_skip"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:text="@string/skip"
                    style="@style/Widget.UIN.Tool.Button.Outlined"
                    android:layout_marginStart="@dimen/spacing_md" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>