<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@android:color/white"
        app:title="@string/title_plugin_permission" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_plugin"
        android:padding="@dimen/spacing_lg"
        android:background="@color/surface_variant"
        style="@style/TextSubtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plugin_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/surface" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_lg">

        <Button
            android:id="@+id/btn_select_all_permissions"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/select_all"
            android:drawableLeft="@drawable/ic_select_all"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:layout_marginEnd="@dimen/spacing_md" />

        <Button
            android:id="@+id/btn_clear_all_permissions"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/deselect_all"
            android:drawableLeft="@drawable/ic_clear_all"
            android:backgroundTint="@color/gray_dark"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/spacing_md" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_config"
        android:padding="@dimen/spacing_lg"
        android:background="@color/surface_variant"
        style="@style/TextSubtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/permission_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>