<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_toolbar"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@android:color/white"
        app:title="@string/widget_1x1_config_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_1x1_select_plugin"
            style="@style/TextSubtitle"
            android:layout_marginBottom="@dimen/spacing_lg" />

        <Spinner
            android:id="@+id/spinner_plugin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:background="@drawable/bg_input" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/confirm"
                style="@style/Widget.UIN.Tool.Button"
                android:layout_marginEnd="@dimen/spacing_md" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/widget_1x1_open_main"
                style="@style/Widget.UIN.Tool.Button.Outlined"
                android:layout_marginStart="@dimen/spacing_md" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
